--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       System.import('app').catch(function(err){ console.error(err); });
     </script>
   </head>
+  <base href="/">
   <!-- 3. Display the application -->
   <body>
     <my-app>Angular 2 Quickstart</my-app>
